OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this vendor program customization is available for onboarding.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>