OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Approval_Policy_Key__c.field-meta.xml
<CustomField>
    <fullName>Approval_Policy_Key__c</fullName>
    <description>Matches Vendor_Program_Approval_Policy__mdt.Policy_Key__c for this vendor program. When set, VPR rows with a blank Approval_Policy_Key__c use this value with Requirement_Type__c to resolve CMDT for the onboarding requirement gate.</description>
    <label>Approval Policy Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>