OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Auto_Insurance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Insurance_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this program requires auto insurance verification.</description>
    <label>Auto Insurance Needed</label>
    <type>Checkbox</type>
</CustomField>