OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Business_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Business_Vertical__c</fullName>
    <description>Business vertical for this program (used for filtering/wizard selection).</description>
    <label>Business Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Agent</fullName>
            </value>
            <value>
                <fullName>National Agent and D2D</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>National Retail</fullName>
            </value>
            <value>
                <fullName>National Retail and National Agent</fullName>
            </value>
            <value>
                <fullName>National Retail and D2D</fullName>
            </value>
            <value>
                <fullName>National Retail, National Agent, and D2D</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>