OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional notes for this vendor program</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>