OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date when set active</description>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>