OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Inherited_Requirement_Group__c.field-meta.xml
<CustomField>
    <fullName>Inherited_Requirement_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To record the group requirement set inherited from the Program Group. Optional but key for automation.</description>
    <label>Inherited Requirement Group</label>
    <referenceTo>Vendor_Program_Requirement_Group__c</referenceTo>
    <relationshipLabel>Inherited Requirement Group</relationshipLabel>
    <relationshipName>Inherited_Requirement_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>