OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Short Quick Label for easy identification</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>