OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Order_Entry_Platform__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order entry platform used by this program (drives integration/fulfillment flows).</description>
    <label>Order Entry Platform</label>
    <type>Checkbox</type>
</CustomField>