OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>For external integrations</description>
    <label>Program Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>