OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Retail_Option__c.field-meta.xml
<CustomField>
    <fullName>Retail_Option__c</fullName>
    <description>Retail option setting for this program (used in downstream eligibility/rules).</description>
    <label>Retail Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Agent</fullName>
            </value>
            <value>
                <fullName>National Retail</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>