OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Vendor record (Account) this program customization belongs to.</description>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Vendor Customizations</relationshipLabel>
    <relationshipName>Vendor_Customizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>