OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Vendor_Program_Group__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link the Program to its Group (organizational grouping). Required for inheritance.</description>
    <label>Vendor Program Group</label>
    <referenceTo>Vendor_Program_Group__c</referenceTo>
    <relationshipLabel>Vendor Programs</relationshipLabel>
    <relationshipName>Vendor_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>