OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version number for this program customization.</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>