OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Vertical__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Entry_Platform__c</columns>
    <columns>Retail_Option__c</columns>
    <columns>Vendor__c</columns>
    <columns>Contract_Record_Type__c</columns>
    <columns>General_Liability_Insurance_Needed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>