OnboardingV2Minimal/force-app/main/default/objects/Vendor_Customization__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Contract_Record_Type__c</columns>
    <columns>Retail_Option__c</columns>
    <columns>Vendor__c</columns>
    <columns>Business_Vertical__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>